--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="header" role="banner">
   <div class="row hide-for-small-only">
-    <div class="small-6 columns text-right">
+    <div class="small-12 columns text-right">
       <ul class="header__menu">
         <li><a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a></li>
         <li><a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a></li>
@@ -28,7 +28,7 @@
               </li>
             <% else %>
               <li>
-                <a href="<%= admin_path %>"><%= t('header.btn_login') %></a>
+                <a href="<%= admin_path %>" class="button"><%= t('header.btn_login') %></a>
                 <%#= link_to 'Registrarse', root_path, class: "button" %>
               </li>
             <% end %>
@@ -41,16 +41,16 @@
         <div class="small-12 columns">
           <ul class="inline-list">
             <li>
-              <%= link_to 'Inicio', root_path, class: current_class(root_path)  %>
+              <%= link_to t('header.btn_home'), root_path, class: current_class(root_path)  %>
             </li>
             <li>
-              <%= link_to 'Agendas', visitors_path, class: current_class(visitors_path) %>
+              <%= link_to t('header.btn_agenda'), visitors_path, class: current_class(visitors_path) %>
             </li>
             <li>
-              <%= link_to 'Registro de lobbies', registration_lobbies_index_path, class: current_class(registration_lobbies_index_path) || current_class(organizations_path)  %>
+              <%= link_to t('header.btn_registration_lobbies'), registration_lobbies_index_path, class: current_class(registration_lobbies_index_path) || current_class(organizations_path)  %>
             </li>
             <li>
-              <%= link_to 'Huella normativa', nil %>
+              <%= link_to t('header.btn_regulations'), nil %>
             </li>
           </ul>
         </div>
@@ -84,16 +84,16 @@
         <% end %>
         <li class="divider"></li>
         <li>
-          <%= link_to 'Inicio', root_path, class: current_class(root_path)  %>
+          <%= link_to t('header.btn_home'), root_path, class: current_class(root_path)  %>
         </li>
         <li>
-          <%= link_to 'Agendas', visitors_path, class: current_class(visitors_path) %>
+          <%= link_to t('header.btn_agenda'), visitors_path, class: current_class(visitors_path) %>
         </li>
         <li>
-          <%= link_to 'Registro de lobbies', registration_lobbies_index_path, class: current_class(registration_lobbies_index_path) || current_class(organizations_path)  %>
+          <%= link_to t('header.btn_registration_lobbies'), registration_lobbies_index_path, class: current_class(registration_lobbies_index_path) || current_class(organizations_path)  %>
         </li>
         <li>
-          <%= link_to 'Huella normativa', nil %>
+          <%= link_to t('header.btn_regulations'), nil %>
         </li>
       </ul>
       <ul>
