--- a/app/views/shared/_header_pages.html.erb
+++ b/app/views/shared/_header_pages.html.erb
@@ -16,7 +16,7 @@
   <div>
     <div class="header-title">
       <div class="row">
-        <h1><strong><%= t('header.title_visitors_html') %></strong></h1>
+        <strong><%= t('header.title_visitors_html') %></strong><br />
         <lead><%= t('header.lead_visitors_html') %></lead>
       </div>
     </div>
