--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,30 +1,85 @@
 <footer class="footer" role="contentinfo">
   <div class="row">
-    <div class="small-12 large-3 mb20 columns">
-      <h1 class="title-m"><strong><%= t('header.open_goverment') %></strong></h1>
+    <div class="small-12 medium-4 mb20 columns">
+      <strong><%= t('footer.title_first_block') %></strong>
       <p>
-        <%= t('footer.description',
-            open_source: link_to(t('footer.open_source'), t('footer.open_source_url'), target: '_blank'),
-            consul:  link_to(t('footer.consul'), t('footer.consul_url'), target: '_blank')).html_safe %>
+        <br />
+        <%= t('footer.description_first_block') %>
       </p>
     </div>
-    <div class="small-12 large-3 mb20 columns">
-      <h4 class="title-m">
-        <a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a>
-      </h4>
-      <p><%= t('footer.participation_text')%></p>
+    <div class="small-12 medium-4 medium-offset-1 mb20 columns">
+      <ul>
+        <li>
+          <%= link_to t('footer.btn_cover_page'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_organization'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_human_resources'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_legal_information'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_economy_budgets'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_relationship_citizens'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_environmen_urbanism'), nil  %>
+        </li>
+        <li>
+          <%= link_to t('footer.btn_access_information'), nil  %>
+        </li>
+      </ul>
     </div>
-    <div class="small-12 large-3 mb20 columns">
-      <h4 class="title-m">
-        <a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a>
-      </h4>
-      <p><%= t('footer.transparency_text')%></p>
-    </div>
-    <div class="small-12 large-3 mb20 columns">
-      <h4 class="title-m">
-        <a href="<%= t('header.open_data_url') %>" target="_blank"><%= t('header.open_data') %></a>
-      </h4>
-      <p><%= t('footer.open_data_text')%></p>
+    <div class="small-12 medium-3 mb20 columns">
+      <strong><%= t('footer.title_third_block') %></strong>
+      <ul>
+        <li>
+          <%= link_to 'www.madrid.es', 'www.madrid.es', target: 'blank'  %>
+        </li>
+        <li>
+          <%= link_to 'sede.madrid.es', 'sede.madrid.es', target: 'blank'  %>
+        </li>
+        <li>
+          <%= link_to 'datos.madrid.es', 'datos.madrid.es', target: 'blank'  %>
+        </li>
+        <li>
+          <%= link_to 'decide.madrid.es', 'decide.madrid.es', target: 'blank'  %>
+        </li>
+      </ul>
     </div>
   </div>
+
+  <div class="footer_more_info">
+    <div class="row">
+      <div class="small-12 medium-4 columns">
+        <%= t('footer.footer_more_info.first_block') %>
+      </div>
+      <div class="small-12 medium-8 columns">
+        <ul class="inline-list right">
+          <li>
+            <%= link_to t('footer.btn_accessibility'), nil  %>
+          </li>
+          <li>
+            <%= link_to t('footer.btn_contact'), nil  %>
+          </li>
+          <li>
+            <%= link_to t('footer.btn_web_map'), nil  %>
+          </li>
+          <li>
+            <%= link_to t('footer.btn_legal_warning'), nil  %>
+          </li>
+          <li>
+            <%= link_to t('footer.btn_privacy_policy'), nil  %>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
 </footer>
