--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -39,16 +39,16 @@
       <strong><%= t('footer.title_third_block') %></strong>
       <ul>
         <li>
-          <%= link_to 'www.madrid.es', 'www.madrid.es', target: 'blank'  %>
+          <%= link_to 'www.madrid.es', 'http://www.madrid.es', target: 'blank'  %>
         </li>
         <li>
-          <%= link_to 'sede.madrid.es', 'sede.madrid.es', target: 'blank'  %>
+          <%= link_to 'sede.madrid.es', 'http://sede.madrid.es', target: 'blank'  %>
         </li>
         <li>
-          <%= link_to 'datos.madrid.es', 'datos.madrid.es', target: 'blank'  %>
+          <%= link_to 'datos.madrid.es', 'http://datos.madrid.es', target: 'blank'  %>
         </li>
         <li>
-          <%= link_to 'decide.madrid.es', 'decide.madrid.es', target: 'blank'  %>
+          <%= link_to 'decide.madrid.es', 'http://decide.madrid.es', target: 'blank'  %>
         </li>
       </ul>
     </div>
