Changed image and added links.

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -34,7 +34,7 @@
       <p>
           <%= t'home.regulations_description' %>
       </p>
-      <%= link_to t('btn_access'), root_path  %>
+      <%= link_to t('btn_access'), rules_path  %>
     </div>
   </figure>
 </div>
