--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,10 +10,10 @@
     <div class="small-12 medium-4 medium-offset-1 mb20 columns">
       <ul>
         <li>
-          <%= link_to t('footer.btn_cover_page'), nil  %>
+          <%= link_to t('footer.btn_cover_page'), root_path  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_organization'), nil  %>
+          <%= link_to t('footer.btn_organization'), organizations_path  %>
         </li>
         <li>
           <%= link_to t('footer.btn_human_resources'), nil  %>
