--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="small-12 medium-4 column">
     <figure>
-      <%= image_tag 'homepage/agendas.png', class: '', alt:'Agenda públicas'%>
+      <%= image_tag 'homepage/query-documents.jpg', class: '', alt:'Agenda públicas'%>
       <div class="content">
         <p><strong><%= t 'registration_lobbies.registry_query_title' %></strong></p>
         <p>
@@ -63,7 +63,7 @@
         <p>
           <%= t'defaults_mailbox.mailbox_description' %>
         </p>
-        <%= link_to t('btn_access'), root_path  %>
+        <%= link_to t('btn_access'), new_infringement_email_path  %>
       </div>
     </figure>
   </div>
