Remove margin style from class .box. Changed in login and recover passoword some classes for responsive.

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7063,7 +7063,8 @@ body {
 .box {
   background: white;
   padding: 23px 12px 60px;
-  margin: 30px -14px; }
+  // margin: 30px -14px;
+}
 @media only screen and (max-width: 40em) {
   .box {
     margin: 0;
