--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 
     <div id="main-content" class="main-content">
       <div class="row">
-        <div class="small-12">
+        <div class="small-12 columns">
           <div class="box small-12 box columns">
             <%= yield %>
           </div>
