--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-  <div class="small-4 large-centered columns">
+  <div class="small-12 medium-6 medium-centered columns">
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
       <h3>Forgot your password?</h3>
       <p>We'll send password reset instructions.</p>
