--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
     <%= stylesheet_link_tag    "admin" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "admin/admin", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
